prod/kbs-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: spring-boot-istio-demo-ingress
  namespace: test-devops-ingress
  labels:
    app.kubernetes.io/name: spring-boot-istio-demo
    app.kubernetes.io/version: v1
  annotations:
    kubesphere.io/creator: test-devops-project-regular
    nginx.ingress.kubernetes.io/upstream-vhost: spring-boot-istio-client.test-devops-ingress.svc.cluster.local
spec:
  rules:
    - host: spring-boot-istio-client.test-devops-ingress.192.168.155.132.nip.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: spring-boot-istio-client
                port:
                  number: 19090
